--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller==6.10.0
+          pip install pyinstaller==6.10.0 matplotlib
 
       - name: Build Windows Executable
         run: |
-          $MatplotlibPath = python -c "import matplotlib; print(matplotlib.__path__[0])"
+          $MatplotlibPath = python -c "import matplotlib; import os; print(os.path.dirname(matplotlib.__file__))"
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to find matplotlib path"
+            exit 1
+          }
           pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" apm.py
         shell: pwsh
 
