--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             Write-Error "Failed to find matplotlib path"
             exit 1
           }
-          pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" apm.py
+          pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" --add-data "icons;icons" apm.py
         shell: pwsh
 
       - name: List dist directory
@@ -65,7 +65,7 @@ jobs:
       - name: Build Linux Executable
         run: |
           MatplotlibPath=$(python -c "import matplotlib; import os; print(os.path.dirname(matplotlib.__file__))")
-          pyinstaller --onefile --add-data "$MatplotlibPath:matplotlib" apm.py
+          pyinstaller --onefile --add-data "$MatplotlibPath:matplotlib" --add-data "icons:icons" apm.py
 
       - name: List dist directory
         run: ls -l dist
