--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
 name: Windows and Linux Build and Release APM Tracker
-
 on:
   push:
     tags:
@@ -9,22 +8,18 @@ on:
 jobs:
   build_windows:
     runs-on: windows-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12.5'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller==6.10.0 matplotlib pillow
-
       - name: Build Windows Executable
         run: |
           $MatplotlibPath = python -c "import matplotlib; import os; print(os.path.dirname(matplotlib.__file__))"
@@ -32,10 +27,9 @@ jobs:
             Write-Error "Failed to find matplotlib path"
             exit 1
           }
-          pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" --add-data "icons:icons" --icon="icons/keebfire.ico" --name="APMTracker" apm.py
-        shell: pwsh
-
-      - name: Verify executable name
+          pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" --add-data "icons:icons" --icon="icons/keebfire.ico" --name="APMTracker" src/main.py
+          shell: pwsh
+      - name: Verify executable
         run: |
           if (Test-Path dist/APMTracker.exe) {
             Write-Host "APMTracker.exe created successfully"
@@ -44,10 +38,6 @@ jobs:
             exit 1
           }
         shell: pwsh
-
-      - name: List dist directory
-        run: dir dist
-
       - name: Archive Windows Executable
         uses: actions/upload-artifact@v4
         with:
@@ -56,28 +46,23 @@ jobs:
 
   build_linux:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12.5'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller==6.10.0 matplotlib pillow
-
       - name: Build Linux Executable
         run: |
           MatplotlibPath=$(python -c "import matplotlib; import os; print(os.path.dirname(matplotlib.__file__))")
-          pyinstaller --onefile --add-data "$MatplotlibPath:matplotlib" --add-data "icons/keebfire.ico:." --add-data "icons:icons" --icon="icons/keebfire.png" --name="APMTracker" apm.py
-
-      - name: Verify executable name
+          pyinstaller --onefile --add-data "$MatplotlibPath:matplotlib" --add-data "icons/keebfire.ico:." --add-data "icons:icons" --icon="icons/keebfire.png" --name="APMTracker" src/main.py
+      - name: Verify executable
         run: |
           if [ -f "dist/APMTracker" ]; then
             echo "APMTracker created successfully"
@@ -85,10 +70,6 @@ jobs:
             echo "APMTracker not found in dist directory"
             exit 1
           fi
-
-      - name: List dist directory
-        run: ls -l dist
-
       - name: Archive Linux Executable
         uses: actions/upload-artifact@v4
         with:
@@ -101,21 +82,17 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
-
     steps:
       - name: Download Windows Executable
         uses: actions/download-artifact@v4
         with:
           name: apm_tracker_windows
-
       - name: Download Linux Executable
         uses: actions/download-artifact@v4
         with:
           name: apm_tracker_linux
-
       - name: Display structure of downloaded files
         run: ls -R
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
