--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
             Write-Error "Failed to find matplotlib path"
             exit 1
           }
-          pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" --add-data "assets/fonts;assets/fonts "--add-data "assets/icons;assets/icons" --icon="assets/icons/keebfire.ico" --name="APMTracker" src/main.py
+          pyinstaller --onefile --noconsole --add-data "$MatplotlibPath;matplotlib" --add-data "assets;assets" --icon="assets/icons/keebfire.ico" --name="APMTracker" src/main.py
         shell: pwsh
       - name: Verify executable
         run: |
@@ -61,7 +61,7 @@ jobs:
       - name: Build Linux Executable
         run: |
           MatplotlibPath=$(python -c "import matplotlib; import os; print(os.path.dirname(matplotlib.__file__))")
-          pyinstaller --onefile --add-data "$MatplotlibPath:matplotlib" --add-data "assets/fonts:assets/fonts" --add-data "assets/icons/keebfire.ico:." --add-data "assets/icons:assets/icons" --icon="assets/icons/keebfire.png" --name="APMTracker" src/main.py
+          pyinstaller --onefile --add-data "$MatplotlibPath:matplotlib" --add-data "assets:assets" --icon="assets/icons/keebfire.png" --name="APMTracker" src/main.py
       - name: Verify executable
         run: |
           if [ -f "dist/APMTracker" ]; then
